# NeutrinoRDP

./: CMakeLists.txt  README.md  config.h.in
channels/: CMakeLists.txt
channels/cliprdr/: cliprdr_format.c  cliprdr_main.h
channels/drdynvc/audin/: audin_main.c  audin_main.h
channels/drdynvc/audin/alsa/: audin_alsa.c
channels/drdynvc/audin/pulse/: audin_pulse.c
channels/drdynvc/tsmf/: tsmf_codec.c  tsmf_constants.h  tsmf_main.c  tsmf_media.c
channels/drdynvc/tsmf/alsa/: tsmf_alsa.c
channels/drdynvc/tsmf/ffmpeg/: tsmf_ffmpeg.c
channels/drdynvc/tsmf/pulse/: tsmf_pulse.c
channels/rail/: rail_main.c
channels/rdpdr/: devman.c  devman.h  rdpdr_main.c
channels/rdpdr/disk/: disk_file.c
channels/rdpdr/printer/: printer_cups.c
channels/rdpdr/serial/: serial_main.c  serial_tty.c
channels/rdpdr/smartcard/: scard_operations.c
channels/rdpsnd/: rdpsnd_main.c  rdpsnd_main.h
channels/rdpsnd/alsa/: rdpsnd_alsa.c
channels/rdpsnd/pulse/: CMakeLists.txt  rdpsnd_pulse.c
channels/tcutils/: CMakeLists.txt  tcutils_main.c  tcutils_main.h
channels/xrdpvr/: CMakeLists.txt  xrdpvr_audio.c  xrdpvr_audio.h  xrdpvr_common.h  xrdpvr_ffmpeg.c  xrdpvr_main.c  xrdpvr_main.h  xrdpvr_player.c  xrdpvr_player.h
channels/xrdpvr/alsa/: CMakeLists.txt  xrdpvr_alsa.c
client/DirectFB/: df_event.c  df_event.h  dfreerdp.c
client/Windows/: wf_event.c  wf_gdi.c  wf_graphics.c  wfreerdp.c
client/X11/: CMakeLists.txt  xf_cliprdr.c  xf_event.c  xf_gdi.c  xf_graphics.c  xf_keyboard.c  xf_monitor.c  xf_monitor.h  xf_rail.c  xf_tsmf.c  xf_window.c  xfreerdp.c  xfreerdp.h
client/test/: freerdp.c
cmake/: ConfigOptions.cmake  FindXrandr.cmake
include/freerdp/: altsec.h  constants.h  freerdp.h  graphics.h  input.h  pointer.h  settings.h  types.h  update.h
include/freerdp/channels/: channels.h
include/freerdp/codec/: bitmap.h  jpeg.h
include/freerdp/utils/: memory.h  nrdp_avcodec.h  sleep.h  stream.h
libfreerdp-cache/: bitmap.c  brush.c  palette.c  pointer.c
libfreerdp-channels/: libchannels.c  wtsvc.c
libfreerdp-codec/: CMakeLists.txt  bitmap.c  color.c  jpeg.c
libfreerdp-codec/include/: bitmap.c
libfreerdp-core/: CMakeLists.txt  activation.c  activation.h  ber.c  ber.h  capabilities.c  capabilities.h  certificate.c  certificate.h  channel.c  channel.h  connection.c  connection.h  credssp.c  credssp.h  crypto.c  crypto.h  fastpath.c  freerdp.c  gcc.c  graphics.c  info.c  input.c  input.h  license.c  listener.c  mcs.c  mppc.c  nego.c  ntlmssp.c  orders.c  peer.c  per.c  pointer.c  pointer.h  rdp.c  rdp.h  redirection.c  rpch.c  rpch.h  (+15 more)
libfreerdp-gdi/: 16bpp.c  32bpp.c  8bpp.c  bitmap.c  gdi.c  graphics.c  graphics.h  pen.c
libfreerdp-kbd/: libkbd.c
libfreerdp-rail/: window.c  window_list.c
libfreerdp-utils/: CMakeLists.txt  args.c  dsp.c  file.c  git_ref.sh  load_plugin.c  memory.c  nrdp_avcodec.c  pcap.c  rail.c  sleep.c  unicode.c
resources/: FreeRDP_Icon_256px.h  README.txt  neutrino-labs.xcf
server/X11/: xf_input.c  xf_peer.c  xfreerdp.c
server/test/: tfreerdp.c
